fixed text wrapping on navbar

--- a/client/src/scss/custom.scss
+++ b/client/src/scss/custom.scss
@@ -24,4 +24,8 @@ $secondary: #ffcf40; //money gold
     color: $secondary;
 }
 
+.no-wrap {
+    white-space: nowrap;
+}
+
 //sass client/src/scss/custom.scss client/src/css/custom.css
